<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_layout"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:backgroundTint="@null"
        android:contentDescription="@string/ml_logo_description"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/singUpButton"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/btn_create_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.ctrlz.beslim.controls.TestButton
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:id="@+id/testButton"
            app:text="@string/btn_continue" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#D2D7DA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="8dp"
                android:text="@string/ml_separator"
                android:textColor="#D2D7DA"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#D2D7DA" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_google_logo"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="@string/btn_continue_google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="#1877F2"
            android:drawableStart="@drawable/ic_facebook_logo"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="@string/btn_continue_facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/link_login"
            android:textColor="#D2D7DA"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>