<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp">

    <!-- drag handle -->
    <View
        android:layout_width="90dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_drag_handle" />


    <!-- sign up textview -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="16dp"
        android:text="@string/sil_title"
        android:textColor="@color/black"
        android:textSize="28sp" />


    <!-- description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:padding="10dp"
        android:text="@string/sil_description"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="18sp" />

    <!-- Email text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/hint_email"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/hint_password"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:passwordToggleDrawable="@drawable/eye_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Continue button -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/black"
        android:drawableRight="@drawable/ic_arrow"
        android:fontFamily="@font/montserrat_medium"
        android:minHeight="55dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/btn_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        />

    <ProgressBar
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/black"
        android:minHeight="55dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:text="@string/btn_restore_access"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_medium"
        android:minHeight="55dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

</LinearLayout>
